# pyspline

./: .gitignore  meson.build  pyproject.toml  setup.py  setup_deprecated.py
.github/workflows/: cd.yml  ci.yml  ci_cd.yml
doc/: install.rst
pyspline/: __init__.py  _version.py
