[build-system]
build-backend = "mesonpy"
requires = ["meson-python", "numpy>=1.21"]

[project]
name = "pyspline"
description = "pySpline is a package containing code for working with b-spline curve, surface, and volume objects"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.md" }
dependencies = ["mdolab-baseclasses>=1.8.2", "scipy>=1.7"]
keywords = ["spline", "b-spline", "optimization"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"] # provided by `./meson.build`.

[project.urls]
Documentation = "https://mdolab-pyspline.readthedocs.io/en/latest/"
Repository = "https://github.com/mdolab/pyspline.git"

[project.optional-dependencies]
testing = ["parameterized", "testflo>=1.4.5", "mdolab-baseclasses>=1.6.1"]
docs = ["sphinx-mdolab-theme>=1.4.2"]

[dependency-groups]
lint = ["ruff>=0.9.7"]
# TODO: move testing and docs here once https://github.com/pypa/pip/pull/13065 is stabilised

[tool.ruff]
line-length = 120

[tool.cibuildwheel]
skip = "pp* cp36* *_i686 *_ppc64le *_s390x *_armv7l"
build-frontend = "build[uv]"
build-verbosity = 3
test-extras = ["testing"]
# adding `--no-editable` to avoid https://github.com/astral-sh/uv/issues/10214
test-command = "uv run --no-editable testflo {project}"

[[tool.cibuildwheel.overrides]]
select = "*-macosx*x86_64"
inherit.environment = "append"
environment.MACOSX_DEPLOYMENT_TARGET = "13.0"

[[tool.cibuildwheel.overrides]]
select = "*-macosx*arm64"
inherit.environment = "append"
environment.MACOSX_DEPLOYMENT_TARGET = "14.0"
